# gh-activity

./: .gitignore  README.md  pyproject.toml
gh_activity/: __init__.py  cache.py  cli.py  fetch.py  report.py
scripts/: generate_samples.py
tests/: test_cache.py  test_cli.py  test_fetch.py  test_report.py
