[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-activity"
version = "0.1.0"
description = "GitHub commit activity graphing utility"
requires-python = ">=3.10"
dependencies = [
    "plotly>=5.18",
    "pandas>=2.0",
]

[project.scripts]
gh-activity = "gh_activity.cli:main"

[tool.setuptools.packages.find]
include = ["gh_activity*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
